# movie-quote-mastodon-bot

./: Dockerfile  Pipfile  README.md  main.py  policy.xml  pyproject.toml  run_tests_ci
.github/workflows/: build.yml
movie_quote_mastodon_bot/: bot.py  config.py  factory.py
tests/: test_bot.py  test_config.py  test_factory.py  test_gif.py  test_mastodon.py  test_subs.py  test_text_clip.py  test_video_clip.py
